tests/error/type_errors/if_not_bool.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo() -> int:
6:        if 42:
             ^^
GuppyTypeError: Expected expression of type `bool`, but got `42` of type `int`
